@@ -1,7 +1,5 @@
-
+#define CVS_ID "$Id$"
 /*
-   $Id$
-
    This program is used to get some OS specific settings
 */
 
@@ -64,6 +62,7 @@ main (void)
 #endif
 
   printf ("\n--  AUTOMATICALLY GENERATED, DO NOT EDIT THIS FILE\n\n");
+  printf ("--  Generator: %s\n\n", CVS_ID);
   printf ("with Interfaces.C.Strings;\n");
   printf ("with System;\n\n");
   printf ("package AWS.OS_Lib.Definitions is\n\n");
